<resources>
    <string name="app_name">MyStoryApp</string>
    <string name="author_name">Author Name</string>
    <string name="description_preview">This is where the description preview should be.</string>
    <string name="add_a_story">Add a story</string>
    <string name="login_description">Log in to your StoryApp Account to get all of the features!</string>
    <string name="register_description">Register to share your story with the others!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Sign In</string>
    <string name="failed_get_stories">Failed to get all stories.</string>
    <string name="login_page_banner">Login page banner.</string>
    <string name="register_page_banner">Register page banner.</string>
    <string name="register_successful">You are registered! Use your email and password to sign in.</string>
    <string name="sign_up_now"><u>Sign Up Now!</u></string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="invalid_email">Not a valid email!</string>
    <string name="invalid_password">Password should contains at least 8 characters!</string>
    <string name="invalid_credentials">"Invalid email or password."</string>
    <string name="failure">There was an error occurred. Please try again.</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="u_sign_in_now_u"><u>Sign in now!</u></string>
    <string name="invalid_name">Put at least 3 characters!</string>
    <string name="type_here">Type your description here</string>
    <string name="no_permission">No permission</string>
    <string name="upload_failure">Upload failed. Please try again.</string>
    <string name="upload_success">Upload successful</string>
    <string name="logout">Logout</string>
    <string name="story_image">Story image</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="camera">Camera</string>
    <string name="retry">Retry</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="location_not_found">\"Location is not found. Try Again\"</string>
</resources>